--- a/src/index.pug
+++ b/src/index.pug
@@ -7,7 +7,7 @@ html(lang="ko")
 		//- TISTORY RSS
 		link(rel="alternate", type="application/rss+xml", title="[##_title_##]", href="[##_rss_url_##]")
 		//- Only for PRODUCT
-		link(rel="stylesheet" href="./style.css")
+		//- link(rel="stylesheet" href="./style.css")
 	body
 		//- TISTORY CONTAINER
 		s_t3
@@ -16,4 +16,4 @@ html(lang="ko")
 				include templates/HelloWorld
 				
 	//- Only for PRODUCT
-	script(type="text/javascript", src="./images/app.bundle.js")
+	//- script(type="text/javascript", src="./images/app.bundle.js")
