--- a/src/templates/HelloWorld.pug
+++ b/src/templates/HelloWorld.pug
@@ -10,7 +10,7 @@
     const refs = [
         { text:"Introduction",  href:"http://appwriter.tistory.com/entry/tidory" }, 
         { text:"Get Started",  href:"http://appwriter.tistory.com/entry/tidory-get-started" },
-        { text:"Documents",  href:"ttp://appwriter.tistory.com/entry/tidory-documents" },
+        { text:"Documents",  href:"http://appwriter.tistory.com/entry/tidory-documents" },
         { text:"Github",  href:"https://github.com/pronist/Tidory" }
     ]
 -   
