--- a/src/templates/HelloWorld.pug
+++ b/src/templates/HelloWorld.pug
@@ -1,4 +1,3 @@
-// script
 - 
     const data = { 
         title: "It's awesome framework for Tistory Skin",
@@ -6,14 +5,12 @@
         logoPath: "./images/favicon.png",
         tidory: "Tidory" 
     }
-- 
     const refs = [
-        { text:"Introduction",  href:"http://appwriter.tistory.com/entry/tidory" }, 
-        { text:"Get Started",  href:"http://appwriter.tistory.com/entry/tidory-get-started" },
-        { text:"Documents",  href:"http://appwriter.tistory.com/entry/tidory-documents" },
-        { text:"Github",  href:"https://github.com/pronist/Tidory" }
+        { text:"Introduction",  href:"http://tidory.com/" }, 
+        { text:"Get Started",  href:"http://tidory.com/docs/get-started/" },
+        { text:"Documents",  href:"http://tidory.com/docs/introduction/" },
+        { text:"Github",  href:"https://github.com/pronist/tidory" }
     ]
--   
     const copyright = {
         author: {
             text: "Author: App Writer(pronist@naver.com)",
@@ -25,7 +22,6 @@
         }
     }
 
-// template
 div#HelloWorld
     div.hello-world-inner
         h1.title #{data.title}
