--- a/src/style.less
+++ b/src/style.less
@@ -23,7 +23,7 @@ a {
 #tistorytoolbarid { 
     display : none; 
 }
-#container {
+#__tidory {
     margin : 0 auto;
     font-family: 'NanumGothic', sans-serif;
     width: 820px;
