Update Demo Template

--- a/src/index.pug
+++ b/src/index.pug
@@ -1,9 +1,9 @@
 extends ../layouts/default
 
 block HEAD
+	meta(charset="utf-8")
 	// Open Graph protocol
-	meta(property="og:description", 
-			content="Tidory Framework for Tistory Skin")
+	meta(property="og:description", content="Tidory Framework for Tistory Skin")
 	meta(property="og:title", content="Tidory")
 	meta(property="og:site_name", content="Tidory")
 	meta(property="og:url", content="http://tidory.com")
