--- a/layouts/default.pug
+++ b/layouts/default.pug
@@ -2,20 +2,22 @@ doctype html
 
 html(lang="ko")
 	head
-		//- BLOG NAME
+		//- Blog Name
 		title Tidory 
 		//- TISTORY RSS
 		link(rel="alternate", type="application/rss+xml", title="[##_title_##]", href="[##_rss_url_##]")
 		//- Only for PRODUCT
 		link(rel="stylesheet" href="./style.css")
-		block HEAD
+		block head
 	body
-		//- TISTORY CONTAINER
+		//- TISTORY Container
 		s_t3
 			div#__tidory
 				block TISTORY
 
 	//- Only for PRODUCT
-	script(type="text/javascript", src="./images/tidory.vendor.bundle.js")
-	script(type="text/javascript", src="./images/tidory.bundle.js")
-	block FOOTER
+	script(type="text/javascript",
+		src="./images/tidory.vendor.bundle.js")
+	script(type="text/javascript",
+		src="./images/tidory.bundle.js")
+	block scripts
