--- a/layouts/default.pug
+++ b/layouts/default.pug
@@ -1,23 +1,42 @@
-doctype html
+extends ../app
 
-html(lang="ko")
-	head
-		//- Blog Name
-		title Tidory 
-		//- TISTORY RSS
-		link(rel="alternate", type="application/rss+xml", title="[##_title_##]", href="[##_rss_url_##]")
-		//- Only for PRODUCT
-		link(rel="stylesheet" href="./style.css")
-		block head
-	body
-		//- TISTORY Container
-		s_t3
-			div#__tidory
-				block TISTORY
-
-	//- Only for PRODUCT
-	script(type="text/javascript",
-		src="./images/tidory.vendor.bundle.js")
-	script(type="text/javascript",
-		src="./images/tidory.bundle.js")
-	block scripts
+block TISTORY
+	//- style
+	style.
+		/* Tidory demo default style */
+		@import url(http://fonts.googleapis.com/earlyaccess/notosanskr.css);
+		* {
+			margin: 0;
+			padding: 0;
+			font-family: 'Noto Sans KR', sans-serif;
+		}
+		body, html, s_t3 {
+			background-color: #fefefe;
+			height: 100%;
+			width: 100%;
+		}
+		li {
+			list-style-type: none;
+		}
+		a {
+			text-decoration: none;
+			color: gray;
+			font-weight: 200;
+			transition-duration: 0.3s;
+		}
+		a:hover {
+			color: black;
+		}
+		#tistorytoolbarid {
+			display: none;
+		}
+		#__tidory {
+			margin: 0 auto;
+			font-family: 'NanumGothic', sans-serif;
+			width: 820px;
+			height: inherit;
+		}
+	//- template
+	s_t3
+		div#__tidory
+			block TIDORY
