--- a/views/HelloWorld.pug
+++ b/views/HelloWorld.pug
@@ -50,9 +50,9 @@ style.
 	}
 	const refs = [
 		{ text:"Introduction",  href:"http://www.tidory.com/" },
-		{ text:"Get Started",  href:"http://www.tidory.com/docs/v2/get-started/" },
-		{ text:"Documents",  href:"http://www.tidory.com/docs/v2/introduction/" },
-		{ text:"Github",  href:"https://github.com/pronist/v2/tidory" }
+		{ text:"Get started",  href:"http://www.tidory.com/docs/v2/get-started/" },
+		{ text:"Tidory module",  href:"https://www.npmjs.com/package/tidory" },
+		{ text:"Github",  href:"https://github.com/pronist/tidory" }
 	]
 //- template
 main#td-hello-world
