--- a/app.pug
+++ b/app.pug
@@ -1,23 +1,15 @@
 doctype html
 
 html(lang="ko")
-	head
-		//- TISTORY RSS
-		link(rel="alternate", type="application/rss+xml", title="[##_title_##]", href="[##_rss_url_##]")
-		//- Encoding
-		meta(charset="utf-8")
-		//- Only for Production
-		unless htmlWebpackPlugin.options.dev
-			link(rel="stylesheet" href='./style.css')
+  head
+    //- TISTORY RSS
+    link(rel="alternate", type="application/rss+xml", title="[##_title_##]", href="[##_rss_url_##]")
+    //- meta
+    meta(charset="utf-8")
+    meta(name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, width=device-width")
+    //- End of Head
+    block HEAD
 
-		//- End of Head
-		block HEADER
-
-	body(id="[##_body_id_##]")
-		//- TISTORY main content
-		block TISTORY
-
-		//- webpack bundle
-		script(src="./images/tidory.bundle.js")
-		//- End of body
-		block FOOTER
+  body(id="[##_body_id_##]")
+    //- TISTORY main content
+    block TISTORY
