--- a/app.pug
+++ b/app.pug
@@ -6,7 +6,7 @@ html(lang="ko")
     link(rel="alternate", type="application/rss+xml", title="[##_title_##]", href="[##_rss_url_##]")
     //- meta
     meta(charset="utf-8")
-    meta(name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, width=device-width")
+    meta(name="viewport", content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, width=device-width")
     //- End of Head
     block HEAD
 
