--- a/index.pug
+++ b/index.pug
@@ -2,14 +2,14 @@ extends ./layouts/default
 
 //- End of head
 block HEAD
-  //- Blog, or Page Name
   title [##_title_##] :: [##_page_title_##]
 
-  //- Modify, or delete open graph protocol for your skin
-  meta(property="og:description", content="Tidory Framework for Tistory Skin")
-  meta(property="og:title", content="Tidory")
-  meta(property="og:site_name", content="Tidory")
-  meta(property="og:url", content="http://www.tidory.com")
+  <!--[if lt IE 9]>
+  script(src="//t1.daumcdn.net/tistory_admin/lib/jquery/jquery-1.12.4.min.js")
+  <![endif]-->
+  <!--[if gte IE 9]><!-->
+  script(src="//t1.daumcdn.net/tistory_admin/lib/jquery/jquery-3.2.1.min.js")
+  <!--<![endif]-->
 
 block TIDORY
   include views/HelloWorld
