--- a/index.pug
+++ b/index.pug
@@ -5,11 +5,11 @@ block HEAD
   title [##_title_##] :: [##_page_title_##]
 
   <!--[if lt IE 9]>
-  script(src="//t1.daumcdn.net/tistory_admin/lib/jquery/jquery-1.12.4.min.js")
+  script(src="https://t1.daumcdn.net/tistory_admin/lib/jquery/jquery-1.12.4.min.js")
   <![endif]-->
   <!--[if gte IE 9]><!-->
-  script(src="//t1.daumcdn.net/tistory_admin/lib/jquery/jquery-3.2.1.min.js")
+  script(src="https://t1.daumcdn.net/tistory_admin/lib/jquery/jquery-3.2.1.min.js")
   <!--<![endif]-->
 
 block TIDORY
-  include views/HelloWorld
+  include views/Index
