--- a/views/Index/Header.pug
+++ b/views/Index/Header.pug
@@ -21,7 +21,7 @@ style.
     font-size: 3.0em;
     font-weight: 200;
   }
-//- script
+//- inline script
 - 
   const data = {
     title: "It's awesome framework for Tistory Skin",
