--- a/views/Index/Refs.pug
+++ b/views/Index/Refs.pug
@@ -10,7 +10,7 @@ style.
   main#td-index-wrapper nav.td-refs div.td-item a {
     font-size: 18pt;
   }
-//- script
+//- inline script
 - 
   const refs = [
     { text:"Introduction",  href:"http://www.tidory.com/" },
