--- a/layouts/default.pug
+++ b/layouts/default.pug
@@ -3,7 +3,7 @@ extends ../app
 block TISTORY
   //- style
   style.
-    /* Tidory demo default style */
+    /*! Tidory demo default style */
     @import url(http://fonts.googleapis.com/earlyaccess/notosanskr.css);
     * {
       margin: 0;
