--- a/index.pug
+++ b/index.pug
@@ -4,6 +4,7 @@ extends ./layouts/default
 block HEAD
   title [##_title_##] :: [##_page_title_##]
 
+  //- scripts
   <!--[if lt IE 9]>
   script(src="https://t1.daumcdn.net/tistory_admin/lib/jquery/jquery-1.12.4.min.js")
   <![endif]-->
@@ -12,4 +13,4 @@ block HEAD
   <!--<![endif]-->
 
 block TIDORY
-  include views/Index
+  include views/Header
