--- a/layouts/default.pug
+++ b/layouts/default.pug
@@ -1,41 +1,42 @@
 extends ../app
 
 block TISTORY
-  //- style
-  style.
-    /*! Tidory demo default style */
-    @import url(http://fonts.googleapis.com/earlyaccess/notosanskr.css);
-    * {
-      margin: 0;
-      padding: 0;
-      font-family: 'Noto Sans KR', sans-serif;
-    }
-    body, html, s_t3 {
-      background-color: #fefefe;
-      height: 100%;
-      width: 100%;
-    }
-    li {
-      list-style-type: none;
-    }
-    a {
-      text-decoration: none;
-      color: gray;
-      font-weight: 200;
-      transition-duration: 0.3s;
-    }
-    a:hover {
-      color: black;
-    }
-    #tistorytoolbarid {
-      display: none;
-    }
-    #__tidory {
-      margin: 0 auto;
-      width: 820px;
-      height: inherit;
-    }
   //- template
   s_t3
     div#__tidory
+      //- style
+      style.
+        /*! Tidory demo default style */
+        @import url(http://fonts.googleapis.com/earlyaccess/notosanskr.css);
+        * {
+          margin: 0;
+          padding: 0;
+          font-family: 'Noto Sans KR', sans-serif;
+        }
+        body, html, s_t3 {
+          background-color: #fefefe;
+          height: 100%;
+          width: 100%;
+        }
+        li {
+          list-style-type: none;
+        }
+        a {
+          text-decoration: none;
+          color: gray;
+          font-weight: 200;
+          transition-duration: 0.3s;
+        }
+        a:hover {
+          color: black;
+        }
+        #tistorytoolbarid {
+          display: none;
+        }
+        #__tidory {
+          margin: 0 auto;
+          width: 820px;
+          height: inherit;
+        }
+      //- template
       block TIDORY
