--- a/index.pug
+++ b/index.pug
@@ -13,4 +13,13 @@ block HEAD
   <!--<![endif]-->
 
 block TIDORY
-  include views/Header
+  //- container
+  div#td-skin-container
+    //- style
+    style.
+      #td-skin-container {
+        width: 100%;
+        height: 100%;
+      }
+    //- template
+    include views/Header
