--- a/views/Header/BlogTitle.pug
+++ b/views/Header/BlogTitle.pug
@@ -3,10 +3,10 @@ section#td-blogTitle-wrapper(role="header")
   //- style
   style.
     #td-blogTitle-wrapper h1 {
-      color: #{TIDORY.FONT_COLOR};
+      color: #525252;
       margin-top: 35px;
       font-size: 2.8em;
       font-weight: 200;
     }
   //- template
-  h1 TIDORY
+  h1 #{TIDORY.title}
