--- a/views/Header.pug
+++ b/views/Header.pug
@@ -14,18 +14,15 @@ header#td-header-wrapper(role="header")
       vertical-align: middle;
       text-align: center;
     }
-
-  //- Vue & vue-router
-  div#app
-    blog-title
-    router-view
-
-  //- IF YOU WANT TO TEST Pug & history-router,
-  //- REMOVE COMMENT 'div#container' -> Header.pug 
-  //- AND 
-  //- 'require(@config)'-> webpack.entry.js
-
-  //- Pug & history-router
-  //- div#container
-    include Header/BlogTitle
-    div#router-view(data-role="router-view")
+  //- template
+  case process.env.APP_VIEW_TYPE
+    when 'vue'
+      //- Vue & vue-router
+      div#app
+        blog-title
+        router-view
+    default
+      //- Pug & history-router
+      div#container
+        include Header/BlogTitle
+        div#router-view(data-role="router-view")
