--- a/routes/views/BlogMenu.pug
+++ b/routes/views/BlogMenu.pug
@@ -15,6 +15,10 @@ nav#td-blogMenu-wrapper(role="navigation")
       font-weight: 300;
     }
   //- template
-  ul
-    each ref in TIDORY.references
-      li: a(href=ref.href)= ref.text
+  case process.env.APP_MODE
+    when 'build'
+      | [##_blog_menu_##]
+    when 'development'
+      ul
+        each ref in TIDORY.references
+          li: a(href=ref.href)= ref.text
