modify: example code

--- a/views/Header.pug
+++ b/views/Header.pug
@@ -17,4 +17,4 @@ header#td-header-wrapper(role="header")
   //- Pug & history-router
   div#container
     include Header/BlogTitle
-    div#router-view(data-role="router-view")
+    include Header/BlogMenu
