modify: nav-component

--- a/layouts/default.pug
+++ b/layouts/default.pug
@@ -23,9 +23,8 @@ block TISTORY
         }
         a {
           text-decoration: none;
-          color: gray;
+          color: black;
           font-weight: 200;
-          transition-duration: 0.3s;
         }
         a:hover {
           color: black;
