--- a/index.pug
+++ b/index.pug
@@ -6,10 +6,10 @@ block HEAD
 
   //- scripts
   <!--[if lt IE 9]>
-  script(src="https://t1.daumcdn.net/tistory_admin/lib/jquery/jquery-1.12.4.min.js")
+  script(src="//t1.daumcdn.net/tistory_admin/lib/jquery/jquery-1.12.4.min.js")
   <![endif]-->
   <!--[if gte IE 9]><!-->
-  script(src="https://t1.daumcdn.net/tistory_admin/lib/jquery/jquery-3.2.1.min.js")
+  script(src="//t1.daumcdn.net/tistory_admin/lib/jquery/jquery-3.2.1.min.js")
   <!--<![endif]-->
 
 block TIDORY
