--- a/layouts/default.pug
+++ b/layouts/default.pug
@@ -7,7 +7,7 @@ block TISTORY
       //- style
       style.
         /*! Tidory demo default style */
-        @import url(http://fonts.googleapis.com/earlyaccess/notosanskr.css);
+        @import url(//fonts.googleapis.com/earlyaccess/notosanskr.css);
         * {
           margin: 0;
           padding: 0;
