--- a/views/Header/BlogTitle.pug
+++ b/views/Header/BlogTitle.pug
@@ -1,13 +1,13 @@
 //- container
 section#td-blogTitle-wrapper(role="header")
   //- style
-  style.
-    #td-blogTitle-wrapper h1 {
-      color: #525252;
-      margin-top: 35px;
-      font-size: 2.8em;
-      font-weight: 200;
-    }
+  style
+    :stylus
+      #td-blogTitle-wrapper h1
+        color: #525252;
+        margin-top: 35px;
+        font-size: 2.8em;
+        font-weight: 200;
   //- template
   case process.env.APP_MODE  
     when 'build'
