--- a/app.pug
+++ b/app.pug
@@ -2,13 +2,21 @@ doctype html
 
 html(lang="ko")
   head
+    title [##_page_title_##]
+
     //- TISTORY RSS
     link(rel="alternate", type="application/rss+xml", title="[##_title_##]", href="[##_rss_url_##]")
     //- meta
     meta(charset="utf-8")
     meta(name="viewport", content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, width=device-width")
-    //- End of Head
-    block HEAD
+    
+    //- scripts
+    <!--[if lt IE 9]>
+    script(src="//t1.daumcdn.net/tistory_admin/lib/jquery/jquery-1.12.4.min.js")
+    <![endif]-->
+    <!--[if gte IE 9]><!-->
+    script(src="//t1.daumcdn.net/tistory_admin/lib/jquery/jquery-3.2.1.min.js")
+    <!--<![endif]-->
 
   body(id="[##_body_id_##]")
     block TISTORY
