--- a/index.pug
+++ b/index.pug
@@ -1,26 +1,14 @@
 extends ./layouts/default
 
-//- End of head
-block HEAD
-  title [##_title_##] :: [##_page_title_##]
-
-  //- scripts
-  <!--[if lt IE 9]>
-  script(src="//t1.daumcdn.net/tistory_admin/lib/jquery/jquery-1.12.4.min.js")
-  <![endif]-->
-  <!--[if gte IE 9]><!-->
-  script(src="//t1.daumcdn.net/tistory_admin/lib/jquery/jquery-3.2.1.min.js")
-  <!--<![endif]-->
-
 block TIDORY
   //- container
   div#td-skin-container
     //- style
-    style.
-      #td-skin-container {
-        width: 100%;
-        height: 100%;
-      }
+    style
+      :stylus
+        #td-skin-container
+          width: 100%;
+          height: 100%
     //- template
     include views/Sidebar
     include views/Header
