--- a/layouts/default.pug
+++ b/layouts/default.pug
@@ -5,36 +5,30 @@ block TISTORY
   s_t3
     div#__tidory
       //- style
-      style.
-        /*! Tidory demo default style */
-        @import url(//fonts.googleapis.com/earlyaccess/notosanskr.css);
-        * {
-          margin: 0;
-          padding: 0;
-          font-family: 'Noto Sans KR', sans-serif;
-        }
-        body, html, s_t3 {
-          background-color: #fefefe;
-          height: 100%;
-          width: 100%;
-        }
-        li {
-          list-style-type: none;
-        }
-        a {
-          text-decoration: none;
-          color: black;
-          font-weight: 200;
-        }
-        a:hover {
-          color: black;
-        }
-        #tistorytoolbarid {
-          display: none;
-        }
-        #__tidory {
-          margin: 0 auto;
-          height: inherit;
-        }
+      style
+        :stylus
+          /*! Tidory demo default style */
+          @import url(//fonts.googleapis.com/earlyaccess/notosanskr.css);
+          *
+            margin: 0;
+            padding: 0;
+            font-family: 'Noto Sans KR', sans-serif;
+          body, html, s_t3
+            background-color: #fefefe;
+            height: 100%;
+            width: 100%;
+          li
+            list-style-type: none;
+          a
+            text-decoration: none;
+            color: black;
+            font-weight: 200;
+            &:hover
+              color: black;
+          #tistorytoolbarid
+            display: none;
+          #__tidory
+            margin: 0 auto;
+            height: inherit;
       //- template
       block TIDORY
