modify: tab to space

--- a/views/Header.pug
+++ b/views/Header.pug
@@ -9,11 +9,11 @@ header#td-header-wrapper(role="header")
         text-align: center;
         width: inherit;
         height: inherit;
-        div:not(#router-view)
+        div
           display: table-cell;
           vertical-align: middle;
           text-align: center;
-  //- Pug & history-router
+  //- template
   div#container
     include Header/BlogTitle
     include Header/BlogMenu
