--- a/views/Sidebar.pug
+++ b/views/Sidebar.pug
@@ -10,35 +10,35 @@ aside#td-sidebar-wrapper
         padding: 0 35px;
         box-sizing: border-box;
         height: 50px;
-      #td-sidebar-wrapper div
-        &.right
-          float: right;
-        &.left
-          float: left;
-        form button
-          border: none;
-          background: none;
-          font-size: 0.95em;
-          cursor: pointer;
-        img 
-          border-radius: 50%;
-          position: relative;
-          width: 32px;
-          height: 32px;
-          top: 9px;
-        a 
-          display: inline;
-        ul li
-          margin: 0 10px;
-          display: inline-block;
-          line-height: 50px;
-          a
-            font-size: 0.9em;
-            font-weight: 300;
-        .user
-          width: 38px;
-          height: 38px;
-          top: 5px;
+        div
+          &.right
+            float: right;
+          &.left
+            float: left;
+          form button
+            border: none;
+            background: none;
+            font-size: 0.95em;
+            cursor: pointer;
+          img 
+            border-radius: 50%;
+            position: relative;
+            width: 32px;
+            height: 32px;
+            top: 9px;
+          a 
+            display: inline;
+          ul li
+            margin: 0 10px;
+            display: inline-block;
+            line-height: 50px;
+            a
+              font-size: 0.9em;
+              font-weight: 300;
+          .user
+            width: 38px;
+            height: 38px;
+            top: 5px;
   //- template
   nav#nav
     //- React
