modify: Logo, tistory package version 2.x

--- a/layouts/default.pug
+++ b/layouts/default.pug
@@ -23,8 +23,9 @@ block TISTORY
             text-decoration: none;
             color: black;
             font-weight: 200;
+            transition-duration: 0.3s;
             &:hover
-              color: black;
+              color: #ed5207 !important;
           #tistorytoolbarid
             display: none;
           #__tidory
