--- a/app.pug
+++ b/app.pug
@@ -17,6 +17,7 @@ html(lang="ko")
     <!--[if gte IE 9]><!-->
     script(src="//t1.daumcdn.net/tistory_admin/lib/jquery/jquery-3.2.1.min.js")
     <!--<![endif]-->
-
+    script(src="https://unpkg.com/tistory")
+    
   body(id="[##_body_id_##]")
     block TISTORY
