--- a/views/Header.pug
+++ b/views/Header.pug
@@ -14,6 +14,6 @@ header#td-header-wrapper(role="header")
           vertical-align: middle;
           text-align: center;
   //- template
-  div#container
+  div
     include Header/BlogTitle
     include Header/BlogMenu
