--- a/views/Sidebar.pug
+++ b/views/Sidebar.pug
@@ -1,4 +1,3 @@
-//- template
 aside#td-sidebar-wrapper(role="sidebar")
   //- style
   style
@@ -25,6 +24,7 @@ aside#td-sidebar-wrapper(role="sidebar")
             width: 24px;
             height: 24px;
             top: 7px;
+            margin-right: 10px
           a 
             display: inline;
           ul li
