--- a/views/Header/BlogMenu.pug
+++ b/views/Header/BlogMenu.pug
@@ -1,9 +1,10 @@
 - 
   const guidebook = [
-    { text:"시작하기",  href:"https://tidory.com" },
-    { text:"프레임워크 아키텍쳐",  href:"https://tidory.com/docs/architecture/architecture/" },
-    { text:"템플릿",  href:"https://tidory.com/docs/template/split/" },
-    { text:"빌드 및 배포",  href:"https://tidory.com/docs/distribution/mode/" }
+    { text:"시작하기",  href:"https://tidory.com/docs/get-started/" },
+    { text:"디렉토리",  href:"https://tidory.com/docs/directory/" },
+    { text:"템플릿",  href:"https://tidory.com/docs/template/" },
+    { text:"프레임워크",  href:"https://tidory.com/docs/framework/" },
+    { text:"빌드 및 배포",  href:"https://tidory.com/docs/distribute/" }
   ];
 nav#td-blogMenu-wrapper(role="navigation")
   //- style
