--- a/index.pug
+++ b/index.pug
@@ -10,6 +10,5 @@ block TIDORY
           width: 100%;
           height: 100%
     //- template
-    include views/Sidebar
-    include views/Header
-    
+    include @tidory/default-sidebar
+    include @tidory/default-header
