fix: preview*.jpg

--- a/index.pug
+++ b/index.pug
@@ -10,5 +10,5 @@ block TIDORY
           width: 100%;
           height: 100%
     //- template
-    include @tidory/default-sidebar
-    include @tidory/default-header
+    include views/Sidebar
+    include views/Header
