--- a/app.pug
+++ b/app.pug
@@ -27,8 +27,7 @@ html(lang="ko")
         font-family: 'Noto Sans KR', sans-serif;
       }
       body, html, s_t3, #__tidory {
-        height: 100%;
-        width: 100%;
+        height: 100vh;
       }
       
   body(id="[##_body_id_##]")
