--- a/views/Header.pug
+++ b/views/Header.pug
@@ -2,16 +2,10 @@ header#td-header-wrapper(role="header")
   //- style
   style.
     #td-header-wrapper {
-      display: table;
-      vertical-align: middle;
-      text-align: center;
-      width: inherit;
-      height: inherit;
-    }
-    #td-header-wrapper > #default-header {
-      display: table-cell;
-      vertical-align: middle;
-      text-align: center;
+      height: 100vh;
+      align-items: center;
+      display: flex;
+      justify-content: center;
     }
   //- template
   include @tidory/default-header
