--- a/app.pug
+++ b/app.pug
@@ -1,31 +1,24 @@
 doctype html
 
-html(lang="ko")
+html(lang='ko')
   head
+    meta(charset='utf-8')
+    meta(name='viewport' content='user-scalable=no, width=device-width')
+
     title [##_page_title_##]
 
-    meta(charset="utf-8")
-    meta(name="viewport", content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, width=device-width")
-
-    link(rel="alternate", type="application/rss+xml", title="[##_title_##]", href="[##_rss_url_##]")
-
-    <!--[if lt IE 9]>
-    script(src="//t1.daumcdn.net/tistory_admin/lib/jquery/jquery-1.12.4.min.js")
-    <![endif]-->
-    <!--[if gte IE 9]><!-->
-    script(src="//t1.daumcdn.net/tistory_admin/lib/jquery/jquery-3.2.1.min.js")
-    <!--<![endif]-->
+    link(rel='alternate' type='application/rss+xml' title='[##_title_##]' href='[##_rss_url_##]')
 
     style.
-      /*! Tidory demo default style */
-      @import url(//fonts.googleapis.com/earlyaccess/notosanskr.css);
+      @import '//fonts.googleapis.com/earlyaccess/notosanskr.css';
+
       * {
-        margin: 0;
-        padding: 0;
+        padding: 0px;
+        margin: 0px;
         font-family: 'Noto Sans KR', sans-serif;
       }
+      a { pointer-events: initial; }
 
-  body(id="[##_body_id_##]")
-    s_t3
-      div#__tidory
-        block TIDORY
+  body(id='[##_body_id_##]')
+    block TIDORY
+
