--- a/index.pug
+++ b/index.pug
@@ -3,7 +3,7 @@ extends app
 block TIDORY
   s_t3
     #__tidory
-      include views/Tidory
+      include views/Header
 
   style.
     #__tidory {
