--- a/views/Header/Navigation.pug
+++ b/views/Header/Navigation.pug
@@ -16,6 +16,9 @@ style.
   header > nav {
     margin-top: 35px;
   }
+  header > nav ul {
+    list-style: none
+  }
   header > nav ul li {
     margin: 0 15px;
     display: inline-block;
@@ -23,7 +26,6 @@ style.
   header > nav ul li a {
     font-size: 1.05em;
     font-weight: 300;
-    list-style-type: none;
     text-decoration: none;
     color: black;
     transition-duration: 0.3s;
