--- a/app.pug
+++ b/app.pug
@@ -3,15 +3,13 @@ doctype html
 html(lang='ko')
   head
     meta(charset='utf-8')
-    meta(name='viewport' content='user-scalable=no, width=device-width')
+    meta(name='viewport' content='width=device-width, initial-scale=1')
 
     title [##_page_title_##]
 
-    link(rel='alternate' type='application/rss+xml' title='[##_title_##]' href='[##_rss_url_##]')
+    link(rel="stylesheet" href="//fonts.googleapis.com/earlyaccess/notosanskr.css")
 
     style.
-      @import '//fonts.googleapis.com/earlyaccess/notosanskr.css';
-
       * {
         padding: 0px;
         margin: 0px;
@@ -21,4 +19,3 @@ html(lang='ko')
 
   body(id='[##_body_id_##]')
     block TIDORY
-
