add: eslint, puglint

--- a/app.pug
+++ b/app.pug
@@ -1,9 +1,9 @@
 doctype html
 
-html(lang='ko')
+html(lang="ko")
   head
-    meta(charset='utf-8')
-    meta(name='viewport' content='width=device-width, initial-scale=1')
+    meta(charset="utf-8")
+    meta(name="viewport" content="width=device-width, initial-scale=1")
 
     title [##_page_title_##]
 
@@ -13,9 +13,9 @@ html(lang='ko')
       * {
         padding: 0px;
         margin: 0px;
-        font-family: 'Noto Sans KR', sans-serif;
+        font-family: "Noto Sans KR", sans-serif;
       }
       a { pointer-events: initial; }
 
-  body(id='[##_body_id_##]')
+  body(id="[##_body_id_##]")
     block TIDORY
