--- a/app.pug
+++ b/app.pug
@@ -15,7 +15,25 @@ html(lang="ko")
         margin: 0px;
         font-family: "Noto Sans KR", sans-serif;
       }
-      a { pointer-events: initial; }
+      a {
+        pointer-events: initial;
+      }
+      body {
+        background-color: var(--background-color);
+      }
+
+    style.
+      @media (prefers-color-scheme: light) {
+        :root {
+          --background-color: white;
+        }
+      }
+    style.
+      @media (prefers-color-scheme: dark) {
+        :root {
+          --background-color: #1e1f21;
+        }
+      }
 
   body(id="[##_body_id_##]")
     block TIDORY
