--- a/views/Header/Title.pug
+++ b/views/Header/Title.pug
@@ -2,19 +2,8 @@ h1 TIDORY
 
 style.
   header > h1 {
-    color: var(--header-title-color);
+    color: var(--color);
     font-size: 2.8em;
     font-weight: 200;
     margin: 0px;
-  }
-
-  @media (prefers-color-scheme: light) {
-    :root {
-      --header-title-color: #525252;
-    }
-  }
-  @media (prefers-color-scheme: dark) {
-    :root {
-      --header-title-color: white;
-    }
   }
