--- a/views/Header/Title.pug
+++ b/views/Header/Title.pug
@@ -1,9 +1,1 @@
-h1 TIDORY
-
-style.
-  header > h1 {
-    color: var(--color);
-    font-size: 2.8em;
-    font-weight: 200;
-    margin: 0px;
-  }
+h1(class='text-zinc-50 text-5xl font-thin m-0') TIDORY
