--- a/app.pug
+++ b/app.pug
@@ -12,5 +12,5 @@ html(lang="ko")
     style
       include @/app.css
 
-  body(id="[##_body_id_##]")
+  body(id="[##_body_id_##]" class='bg-zinc-900 font-sans')
     block TIDORY
