--- a/index.pug
+++ b/index.pug
@@ -2,14 +2,5 @@ extends app
 
 block TIDORY
   s_t3
-    #__tidory
+    #__tidory(class='h-screen flex justify-center text-center items-center')
       include views/Header
-
-  style.
-    #__tidory {
-      height: 100vh;
-      align-items: center;
-      display: flex;
-      justify-content: center;
-      text-align: center;
-    }
