--- a/views/Header/Navigation.pug
+++ b/views/Header/Navigation.pug
@@ -7,11 +7,8 @@
     { text: '빌드 및 배포', href: 'https://tidory.com/docs/deployment' }
   ];
 
-nav(class='mt-9')
-  ul(class='list-none')
+nav(class="mt-9")
+  ul(class="list-none")
     each guide in guidebook
-      li(class='mx-4 inline-block')
-        a(
-          href=guide.href
-          class='text-base font-light text-zinc-300 duration-200 pointer-events-auto decoration-0 hover:text-zinc-50'
-        )=guide.text
+      li(class="mx-4 inline-block")
+        a(href=guide.href class="text-base font-light text-zinc-300 duration-200 pointer-events-auto decoration-0 hover:text-zinc-50")=guide.text
