--- a/app.pug
+++ b/app.pug
@@ -10,7 +10,7 @@ html(lang="ko")
     link(rel="stylesheet" href="//fonts.googleapis.com/earlyaccess/notosanskr.css")
 
     style
-      include @/app.css
+      include:postcss @/app.css
 
   body(id="[##_body_id_##]" class="bg-zinc-900 font-sans")
     block TIDORY
