--- a/index.pug
+++ b/index.pug
@@ -2,5 +2,5 @@ extends app
 
 block TIDORY
   s_t3
-    #__tidory(class="h-screen flex justify-center text-center items-center")
+    div(class="h-screen flex justify-center text-center items-center")
       include views/Header
