Add toggle dark and light mode example using alpinejs

--- a/views/Header/Navigation.pug
+++ b/views/Header/Navigation.pug
@@ -11,4 +11,4 @@ nav(class="mt-9")
   ul(class="list-none")
     each guide in guidebook
       li(class="mx-4 inline-block")
-        a(href=guide.href class="text-base font-light text-zinc-300 duration-200 pointer-events-auto decoration-0 hover:text-zinc-50")=guide.text
+        a(href=guide.href class="text-base duration-200 pointer-events-auto decoration-0 text-gray-500 hover:text-black dark:text-zinc-300 dark:hover:text-zinc-50")=guide.text
