--- a/index.pug
+++ b/index.pug
@@ -4,3 +4,4 @@ block TIDORY
   s_t3
     div(class="h-screen flex justify-center text-center items-center")
       include views/Header
+      include views/Bottom
