--- a/app.pug
+++ b/app.pug
@@ -2,7 +2,7 @@ doctype html
 
 html(
   x-data="{ dark: window.matchMedia('(prefers-color-scheme: dark)').matches }"
-  :class='{ "dark": dark }'
+  :class="{ dark: dark }"
   lang="ko")
   head
     meta(charset="utf-8")
@@ -10,8 +10,8 @@ html(
 
     title [##_page_title_##]
 
-    link(rel='stylesheet' :href='"//fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&display=swap"')
-    link(rel='stylesheet' :href='"//cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"')
+    link(rel="stylesheet" :href="'//fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&display=swap'")
+    link(rel="stylesheet" :href="'//cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css'")
 
     style
       include:postcss @/app.css
@@ -20,4 +20,4 @@ html(
     block TIDORY
 
     script.
-      document.addEventListener('DOMContentLoaded', () => Alpine.start())
+      document.addEventListener("DOMContentLoaded", () => Alpine.start())
