--- a/assets/app.css
+++ b/assets/app.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.menu_toolbar {
+  @apply hidden;
+}
+
+a,
+button {
+  @apply pointer-events-auto !important;
+}
