--- a/views/Bottom.pug
+++ b/views/Bottom.pug
@@ -1,5 +1,7 @@
-div(class='fixed bottom-4 right-4')
+div(class="fixed bottom-4 right-4")
   button(
-    @click='dark = ! dark'
-    class='w-10 h-10 flex justify-center items-center w-10 h-10 outline-0 rounded-full bg-zinc-100 text-zinc-400 dark:bg-zinc-800 dark:text-zinc-50')
-    i(class='fa-solid fa-moon')
+    type="button"
+    class="w-10 h-10 flex justify-center items-center w-10 h-10 outline-0 rounded-full bg-zinc-100 text-zinc-400 dark:bg-zinc-800 dark:text-zinc-50"
+    @click="dark = ! dark")
+    span(class="text-[0]") 테마
+    i(class="fa-solid fa-moon")
