Add text-hidden utility class

--- a/assets/app.css
+++ b/assets/app.css
@@ -10,3 +10,10 @@ a,
 button {
   @apply pointer-events-auto !important;
 }
+
+
+@layer utilities {
+  .text-hidden {
+    @apply absolute w-px h-px -m-px overflow-hidden !important;
+  }
+}
