--- a/views/Header/Title.pug
+++ b/views/Header/Title.pug
@@ -1,1 +1,1 @@
-h1(class="text-5xl m-0 text-zinc-800 dark:text-zinc-50") TIDORY
+h1(class="font-normal text-5xl m-0 text-gray-700 dark:text-zinc-50") TIDORY
