--- a/views/Header/Navigation.pug
+++ b/views/Header/Navigation.pug
@@ -1,10 +1,10 @@
 -
   const guidebook = [
-    { text: '시작하기', href: 'https://tidory.com/docs/get-started' },
-    { text: '디렉토리', href: 'https://tidory.com/docs/directory' },
-    { text: '템플릿', href: 'https://tidory.com/docs/template' },
-    { text: '프레임워크', href: 'https://tidory.com/docs/framework' },
-    { text: '빌드 및 배포', href: 'https://tidory.com/docs/deployment' }
+    { text: '시작하기', href: 'https://tidory.github.io/docs/get-started' },
+    { text: '디렉토리', href: 'https://tidory.github.io/docs/directory' },
+    { text: '템플릿', href: 'https://tidory.github.io/docs/template' },
+    { text: '프레임워크', href: 'https://tidory.github.io/docs/framework' },
+    { text: '빌드 및 배포', href: 'https://tidory.github.io/docs/deployment' }
   ];
 
 nav(class="mt-9")
