--- a/app.pug
+++ b/app.pug
@@ -10,7 +10,7 @@ html(
 
     title [##_page_title_##]
 
-    link(rel="stylesheet" :href="'//fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&display=swap'")
+    link(rel="stylesheet" :href="'//cdn.jsdelivr.net/gh/sunn-us/SUIT/fonts/static/woff2/SUIT.css'")
     link(rel="stylesheet" :href="'//cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css'")
 
     style
